--- a/templates/hot.html
+++ b/templates/hot.html
@@ -1,12 +1,12 @@
 {% extends "_ext_base_right_column.html" %}
 
-{% block title %}Tag{% endblock %}
+{% block title %}Hot{% endblock %}
 
 {% block content %}
 
 <div class="panel panel-default">
     <div class="panel-body">
-        Tagged questions: <strong>{{ tag_name }}</strong>
+        Hot questions
     </div>
 </div>
 
