--- a/templates/question.html
+++ b/templates/question.html
@@ -1,4 +1,4 @@
-{% extends "base_right_column.html" %}
+{% extends "_ext_base_right_column.html" %}
 
 {% block title %}Question{% endblock %}
 
@@ -71,18 +71,24 @@
 </div>
 {% endfor %}
 
-<div class="panel panel-default answer">
-    <div class="panel-body">
-        <form class="form-horizontal">
-            <label for="basic-url">Type your answer:</label>
-            <div class="form-group">
-                <div class="col-md-12">
-                    <textarea class="form-control askme-textarea" rows="5" id="answer" placeholder ="enter text" maxlength="512"></textarea>
-                </div>
+<div class="answer">
+    <div class="media">
+        <div class="media-left">
+            <img src="/static/img/batman.jpg" class="media-object img-thumbnail question-avatar">
+        </div>
+        <div class="media-body">
+            <div class="panel-body answer-panel">
+                <form class="form-horizontal">
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            <textarea class="form-control askme-textarea" rows="5" id="answer" placeholder ="type your answer" maxlength="512"></textarea>
+                        </div>
+                    </div>
+                    <div class="alert alert-danger" role="alert">Sorry, text area is empty!</div>
+                    <button type="submit" class="btn btn-default">Answer</button>
+                </form>
             </div>
-            <div class="alert alert-danger" role="alert">Sorry, text area is empty!</div>
-            <button type="submit" class="btn btn-default">Answer</button>
-        </form>
+        </div>
     </div>
 </div>
 
