--- a/templates/hot.html
+++ b/templates/hot.html
@@ -16,7 +16,8 @@
         {% include "_inc_question.html" %}
     {% endfor %}
 
-    {% include "_inc_paginator.html" %}
+    {% url 'hot' as hot_url %}
+    {% include "_inc_paginator.html" with paginator_url=hot_url %}
 
 {% else %}
     <div class="alert alert-warning" role="alert">Sorry, there is nothing to show you.</div>
