--- a/templates/_ext_base.html
+++ b/templates/_ext_base.html
@@ -48,12 +48,12 @@
                                         <input type="text" class="form-control" placeholder="Search">
                                     </div>
                                     <a href="{% url 'ask' %}" class="btn btn-default">
-                                        <span class="glyphicon glyphicon glyphicon-question-sign askme-icon" aria-hidden="true"></span>
+                                        <span class="glyphicon glyphicon-question-sign askme-icon" aria-hidden="true"></span>
                                         Ask
                                     </a>
-                                    <a href="{% url 'hot' %}" class="btn btn-default">
-                                        <span class="glyphicon glyphicon glyphicon-fire askme-icon" aria-hidden="true"></span>
-                                        Hot
+                                    <a href="{% url 'best' %}" class="btn btn-default">
+                                        <span class="glyphicon glyphicon-ok-sign askme-icon" aria-hidden="true"></span>
+                                        Best
                                     </a>
                                 </form>
 
