--- a/templates/ask.html
+++ b/templates/ask.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="panel panel-default askme-panel">
-    <div class="panel-heading"><h4>New question</h4></div>
+    <div class="panel-heading">New question</div>
     <div class="panel-body">
         <form class="form-horizontal">
             <div class="form-group">
