--- a/templates/tag.html
+++ b/templates/tag.html
@@ -4,11 +4,7 @@
 
 {% block content %}
 
-<div class="panel panel-default">
-    <div class="panel-body">
-        Tagged questions: <strong>{{ tag_name }}</strong>
-    </div>
-</div>
+<div class="well well-sm">Tagged questions: <strong>{{ tag_name }}</strong></div>
 
 {% if page %}
 
@@ -20,7 +16,7 @@
     {% include "_inc_paginator.html" with paginator_url=tag_url %}
 
 {% else %}
-    <div class="alert alert-warning" role="alert">Sorry, there is nothing to show you.</div>
+    {% include "_inc_empty.html" %}
 {% endif %}
 
 {% endblock %}
