--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,10 +5,17 @@
 {% block content %}
 
 <div class="panel panel-default askme-panel">
+    <div class="panel-heading">Sign up</div>
+    <div class="panel-body">
 
-    <div class="panel-heading">
-        <h4>Sign up</h4>
+        {% include "_inc_form_default.html" with button_name='Submit' %}
+
     </div>
+</div>
+
+<div class="panel panel-default askme-panel">
+
+    <div class="panel-heading">Sign up</div>
     <div class="panel-body">
         <form class="form-horizontal">
             <div class="form-group">
@@ -33,7 +40,7 @@
             <div class="form-group">
                 <label class="control-label col-sm-2" for="pwd">Repeat password:</label>
                 <div class="col-sm-10">
-                    <input type="password" class="form-control" id="pwd" placeholder="enter password once again">
+                    <input type="password" class="form-control" id="pwd2" placeholder="enter password once again">
                 </div>
             </div>
             <div class="form-group">
