--- a/templates/_ext_base.html
+++ b/templates/_ext_base.html
@@ -57,10 +57,18 @@
                                     </a>
                                 </form>
 
-
                                 <ul class="nav navbar-nav navbar-right">
-                                    <li><a href="{% url 'login' %}">Login</a></li>
-                                    <li><a href="{% url 'signup' %}">Sign up</a></li>
+                                    {% if user.is_authenticated %}
+                                        <li><a href="">{{ user }}</a></li>
+                                        <li><a href="{% url 'profile' %}">Profile</a></li>
+                                        {% if user.is_staff %}
+                                            <li><a href="{% url 'admin:index' %}">Admin panel</a></li>
+                                        {% endif %}
+                                        <li><a href="{% url 'logout' %}?next={{request.path}}">Logout</a></li>
+                                    {% else %}
+                                        <li><a href="{% url 'login' %}?next={{request.path}}">Login</a></li>
+                                        <li><a href="{% url 'signup' %}">Sign up</a></li>
+                                    {% endif %}
                                 </ul>
 
                             </div>
