--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,20 +1,20 @@
 {% extends "_ext_base_centered.html" %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Profile{% endblock %}
 
 {% block content %}
 
 <div class="panel panel-default askme-panel">
-    <div class="panel-heading">Login</div>
+    <div class="panel-heading">Profile</div>
     <div class="panel-body">
 
-        {% include "_inc_form_default.html" with button_name='Submit' %}
+        {% include "_inc_form_default.html" with button_name='Save' %}
 
     </div>
 </div>
 
 <div class="panel panel-default askme-panel">
-    <div class="panel-heading">Login</div>
+    <div class="panel-heading">Profile</div>
     <div class="panel-body">
         <form class="form-horizontal">
             <div class="form-group">
