--- a/templates/signup.html
+++ b/templates/signup.html
@@ -49,7 +49,7 @@
                     <label class="btn btn-default btn-file">
                         Browse <input type="file" style="display: none;">
                     </label>
-                    <img src="/static/img/batman.jpg" class="media-object img-thumbnail question-avatar">
+                    <img src="{% static 'img/batman.jpg' %}" class="media-object img-thumbnail question-avatar">
                 </div>
             </div>
             <div class="alert alert-danger" role="alert">Sorry, this email address allready registered!</div>
