--- a/templates/_ext_base.html
+++ b/templates/_ext_base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+    {% load static %}
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +9,8 @@
         <title>{% block title %}{% endblock %}</title>
 
         <!-- Bootstrap -->
-        <link href="/static/css/bootstrap.css" rel="stylesheet">
-        <link href="/static/css/style.css" rel="stylesheet">
+        <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+        <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -36,7 +37,7 @@
                                     <span class="icon-bar"></span>
                                 </button>
                                 <a class="navbar-brand" href="{% url 'home' %}">
-                                    <img alt="brand" src="/static/img/logo_small.png" class="askme-logo">
+                                    <img alt="brand" src="{% static 'img/logo_small.png' %}" class="askme-logo">
                                 </a>
                                 <a class="navbar-brand" href="{% url 'home' %}">Askme</a>
                             </div>
@@ -59,7 +60,14 @@
 
                                 <ul class="nav navbar-nav navbar-right">
                                     {% if user.is_authenticated %}
-                                        <li><a href="">{{ user }}</a></li>
+                                        {% if user.profile.avatar %}
+                                            <li>
+                                                <a class="navbar-brand" href="{% url 'profile' %}">
+                                                    <img src="{{ user.profile.avatar.url }}" class="avatar img-thumbnail askme-nav-avatar">
+                                                </a>
+                                            </li>
+                                        {% endif %}
+                                        <li><a href="{% url 'profile' %}">{{ user }}</a></li>
                                         <li><a href="{% url 'profile' %}">Profile</a></li>
                                         {% if user.is_staff %}
                                             <li><a href="{% url 'admin:index' %}">Admin panel</a></li>
@@ -74,7 +82,6 @@
                             </div>
                         </div>
                     </nav>
-
                     {% block base_extension %}{% endblock %}
 
                 </div>
@@ -86,6 +93,6 @@
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="/static/js/bootstrap.min.js"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
     </body>
 </html>
