--- a/templates/_inc_form_default.html
+++ b/templates/_inc_form_default.html
@@ -2,7 +2,7 @@
     {% csrf_token %}
 
     {% for field in form %}
-        <div class="form-group">
+        <div class="form-group {% if field.errors %}has-error{% endif %}">
             <label class="col-sm-2 control-label" for="id_{{ field.name }}">{{ field.label }}:</label>
             <div class="col-sm-10">
                 {{ field }}
