--- a/templates/question.html
+++ b/templates/question.html
@@ -10,7 +10,9 @@
 <div class="answer">
     <div class="media">
         <div class="media-left">
-            <img src="/static/img/batman.jpg" class="media-object img-thumbnail question-avatar">
+            {% with answer.user.profile as profile %}
+                {% include "_inc_avatar_media.html" %}
+            {% endwith %}
         </div>
         <div class="media-body">
             <div class="answer-body">
@@ -36,7 +38,7 @@
                         </button>
                         <p>
                             {% for answervote in answer.answervote_set.all %}
-                                {{ answervote.user }}
+                                {{ answervote.user }}({{ answervote.vote }})
                             {% endfor %}
                         </p>
                     </div>
@@ -51,7 +53,9 @@
 <div class="answer">
     <div class="media">
         <div class="media-left">
-            <img src="/static/img/batman.jpg" class="media-object img-thumbnail question-avatar">
+            {% with user.profile as profile %}
+                {% include "_inc_avatar_media.html" %}
+            {% endwith %}
         </div>
         <div class="media-body">
             <div class="panel-body answer-panel">
@@ -63,26 +67,6 @@
     </div>
 </div>
 
-<div class="answer">
-    <div class="media">
-        <div class="media-left">
-            <img src="/static/img/batman.jpg" class="media-object img-thumbnail question-avatar">
-        </div>
-        <div class="media-body">
-            <div class="panel-body answer-panel">
-                <form class="form-horizontal">
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <textarea class="form-control askme-textarea" rows="5" id="answer" placeholder ="type your answer" maxlength="512"></textarea>
-                        </div>
-                    </div>
-                    <div class="alert alert-danger" role="alert">Sorry, text area is empty!</div>
-                    <button type="submit" class="btn btn-default">Answer</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
 {% endif %}
 
 {% endblock %}
