--- a/templates/_ext_base.html
+++ b/templates/_ext_base.html
@@ -91,8 +91,11 @@
         </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
+        <script type="text/javascript" src="{% static 'js/jquery-1.12.4.min.js' %}"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
+        <script type="text/javascript" src="{% static 'js/askme.js' %}"></script>
     </body>
 </html>
