--- a/templates/best.html
+++ b/templates/best.html
@@ -16,7 +16,7 @@
     {% include "_inc_paginator.html" with paginator_url=best_url %}
 
 {% else %}
-    {% include "_inc_empty.html" %}
+    {% include "_inc_warning_empty.html" %}
 {% endif %}
 
 {% endblock %}
