--- a/templates/_inc_answer.html
+++ b/templates/_inc_answer.html
@@ -21,16 +21,18 @@
                         {% endif %}
 
                         <a href="#">Votes <span class="badge askme-badge">{{ answer.vote_sum }}</span></a>
-                        <button type="button" class="btn btn-default btn-xs">
-                            <span class="glyphicon glyphicon-triangle-top askme-icon js-vote" data-id="{{ answer.id }}" data-type="answer-like" aria-hidden="true"></span>
-                        </button>
-                        <button type="button" class="btn btn-default btn-xs">
-                            <span class="glyphicon glyphicon-triangle-bottom askme-icon js-vote" data-id="{{ answer.id }}" data-type="answer-dislike" aria-hidden="true"></span>
-                        </button>
-                        {% if user == question.user %}
+                        {% if user.is_authenticated %}
                             <button type="button" class="btn btn-default btn-xs">
-                                <span class="glyphicon glyphicon-ok askme-icon js-correct" data-id="{{ answer.id }}" data-type="answer-correct" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon-triangle-top askme-icon js-vote" data-id="{{ answer.id }}" data-type="answer-like" aria-hidden="true"></span>
                             </button>
+                            <button type="button" class="btn btn-default btn-xs">
+                                <span class="glyphicon glyphicon-triangle-bottom askme-icon js-vote" data-id="{{ answer.id }}" data-type="answer-dislike" aria-hidden="true"></span>
+                            </button>
+                            {% if user == question.user %}
+                                <button type="button" class="btn btn-default btn-xs">
+                                    <span class="glyphicon glyphicon-ok askme-icon js-correct" data-id="{{ answer.id }}" data-type="answer-correct" aria-hidden="true"></span>
+                                </button>
+                            {% endif %}
                         {% endif %}
                         <p>
                             [{{ answer.vote_sum }}]
