--- a/templates/_ext_base.html
+++ b/templates/_ext_base.html
@@ -46,7 +46,12 @@
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                 <form class="navbar-form navbar-left">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Search">
+                                        {% csrf_token %}
+                                        <input type="text" class="form-control" placeholder="Search" id="askme-search">
+                                        <div id="askme-search-div" class="askme-dropdown">
+                                            <ul class="dropdown-menu askme-dropdown-content">
+                                            </ul>
+                                        </div>
                                     </div>
                                     <a href="{% url 'ask' %}" class="btn btn-default">
                                         <span class="glyphicon glyphicon-question-sign askme-icon" aria-hidden="true"></span>
@@ -57,7 +62,6 @@
                                         Best
                                     </a>
                                 </form>
-
                                 <ul class="nav navbar-nav navbar-right">
                                     {% if user.is_authenticated %}
                                         {% if user.profile.avatar %}
@@ -82,6 +86,7 @@
                             </div>
                         </div>
                     </nav>
+
                     {% block base_extension %}{% endblock %}
 
                 </div>
