--- a/templates/question.html
+++ b/templates/question.html
@@ -11,7 +11,7 @@
 {% endfor %}
 
 {% if user.is_authenticated %}
-<div class="answer">
+<div class="answer answer-form">
     <div class="media">
         <div class="media-left">
             {% with user.profile as profile %}
